@@ -46,6 +46,7 @@ END_OPTION
 
 OPTION
   NAME = "integration method"
+  DOC_ITEM
 A string specifing the method of integration to use to solve the ODE
 system.  Valid values are
 
@@ -59,7 +60,6 @@ Use stiff backward differentiation formula (BDF) method.  If a
 function to compute the Jacobian is not supplied, @code{lsode} will
 compute a finite difference approximation of the Jacobian matrix.
 @end table
-  DOC_ITEM
   END_DOC_ITEM
   TYPE = "std::string"
   SET_ARG_TYPE = "const $TYPE&"
@@ -84,6 +84,18 @@ automatically).
   TYPE = "double"
   INIT_VALUE = "-1.0"
   SET_EXPR = "(val >= 0.0) ? val : -1.0"
+END_OPTION
+
+OPTION
+  NAME = "maximum order"
+  DOC_ITEM
+Restrict the maximum order of the solution method.  If using the Adams
+method, this option must be between 1 and 12.  Otherwise, it must be
+between 1 and 5, inclusive.
+  END_DOC_ITEM
+  TYPE = "int"
+  INIT_VALUE = "-1"
+  SET_EXPR = "val"
 END_OPTION
 
 OPTION
