@@ -29,13 +29,6 @@ END_OPTION
 
 OPTION
   NAME = "relative tolerance"
-  TYPE = "double"
-  INIT_VALUE = "::sqrt (DBL_EPSILON)"
-  SET_EXPR = "(val > 0.0) ? val : ::sqrt (DBL_EPSILON)"
-END_OPTION
-
-OPTION
-  NAME = "integration method"
   DOC_ITEM
 Relative tolerance parameter.  Unlike the absolute tolerance, this
 parameter may only be a scalar.
@@ -45,6 +38,28 @@ The local error test applied at each integration step is
 @example
   abs (local error in x(i)) <= rtol * abs (y(i)) + atol(i)
 @end example
+  END_DOC_ITEM
+  TYPE = "double"
+  INIT_VALUE = "::sqrt (DBL_EPSILON)"
+  SET_EXPR = "(val > 0.0) ? val : ::sqrt (DBL_EPSILON)"
+END_OPTION
+
+OPTION
+  NAME = "integration method"
+  DOC_ITEM
+A string specifing the method of integration to use to solve the ODE
+system.  Valid values are
+
+@table @asis
+@item \"adams\"
+@itemx \"non-stiff\"
+No Jacobian used (even if it is available).
+@item \"bdf\"
+@item \"stiff\"
+Use stiff backward differentiation formula (BDF) method.  If a
+function to compute the Jacobian is not supplied, @code{lsode} will
+compute a finite difference approximation of the Jacobian matrix.
+@end table
   END_DOC_ITEM
   TYPE = "std::string"
   SET_ARG_TYPE = "const $TYPE&"
@@ -69,6 +84,18 @@ automatically).
   TYPE = "double"
   INIT_VALUE = "-1.0"
   SET_EXPR = "(val >= 0.0) ? val : -1.0"
+END_OPTION
+
+OPTION
+  NAME = "maximum order"
+  DOC_ITEM
+Restrict the maximum order of the solution method.  If using the Adams
+method, this option must be between 1 and 12.  Otherwise, it must be
+between 1 and 5, inclusive.
+  END_DOC_ITEM
+  TYPE = "int"
+  INIT_VALUE = "-1"
+  SET_EXPR = "val"
 END_OPTION
 
 OPTION
